--- a/components/molecules/Steps/Steps.module.scss
+++ b/components/molecules/Steps/Steps.module.scss
@@ -14,6 +14,8 @@
     height: 100%;
 
     svg {
+      height: 16px;
+      width: 16px;
       path {
         fill: var(--base60);
       }
